--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                 <div class="col-md-3 hidden-sm hidden-xs"><img src="img/unicornio2.jpg" class="wp2"></div>
             </div>
             <div class="row">
-                <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/ana.jpg" class="wp8">
+                <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/unicornio.jpg" class="wp8">
                 </div>
-                <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/manu2.jpg" class="wp9">
+                <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/unicornio2.jpg" class="wp9">
                 </div>
             </div>
         </div>
