--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center hero-text">
                         <h3>¡María recibe su primera comunión!</h3>
-                        <p>29 de Mayo de 2021</p>
+                        <p>19 de Septiembre de 2021</p>
                         <p>A María le gustaría que formeis parte de este gran día</p>
                         <div id="countdown">
                             <h3>Cuenta atrás</h3>
@@ -132,7 +132,7 @@
                 <div class="col-md-12 text-center">
                     <h3 class="header">Evento</h3>
                     <p>
-                        <h3><strong>29 de Mayo</strong></h3>
+                        <h3><strong>19 de Septiembre</strong></h3>
                     </p>
                 </div>
             </div>
@@ -140,17 +140,17 @@
                 <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                     <div class="wp3">
                         
-                        <h3>Ceremonia <span class="time">12:00</span></h3>
-                        <h4>Parroquia Nombre</h4>
+                        <h3>Ceremonia <span class="time">11:30</span></h3>
+                        <h4>Parroquia San José</h4>
                         <div class="row">
                             <div class="col-xs-2">
-                                <a target="_blank" href="https://goo.gl/maps/TiFwr4r25BuW4rj27" id="btn-show-map"><img
+                                <a target="_blank" href="https://goo.gl/maps/1HtqeWLaH47xVXBz7" id="btn-show-map"><img
                                         class="map-icon" src='img/googleMaps.png'>
                                 </a>
                             </div>
                             <div class="col-md-8">
-                                <a target="_blank" href="https://goo.gl/maps/TiFwr4r25BuW4rj27" id="btn-show-map">
-                                    <h4 style="padding-top: 13px;">Dirección</h4>
+                                <a target="_blank" href="https://goo.gl/maps/1HtqeWLaH47xVXBz7" id="btn-show-map">
+                                    <h4 style="padding-top: 13px;">Dirección: Calle Sor Policarpa, 1, 04005 Almería</h4>
                                 </a>
                             </div>
                         </div>
@@ -163,16 +163,16 @@
                     <div class="wp4" id="confirmation">
                         
                         <h3>Banquete <span class="time">14:00</span></h3>
-                        <h4>Sitio</h4>
+                        <h4>Casa Rafael</h4>
                         <div class="row">
                             <div class="col-xs-2">
-                                <a target="_blank" href="https://goo.gl/maps/dJQS6Q5w1FmP1uzc9" id="btn-show-map"><img
+                                <a target="_blank" href="https://goo.gl/maps/brHCTKMZaFXiE3GN8" id="btn-show-map"><img
                                         class="map-icon" src='img/googleMaps.png'>
                                 </a>
                             </div>
                             <div class="col-md-8">
-                                <a target="_blank" href="https://goo.gl/maps/dJQS6Q5w1FmP1uzc9" id="btn-show-map">
-                                    <h4> Dirección </h4>
+                                <a target="_blank" href="https://goo.gl/maps/brHCTKMZaFXiE3GN8" id="btn-show-map">
+                                    <h4> Dirección: Carretera Nacional 340, 259, 04230 Huércal de Almería, Almería </h4>
                                 </a>
                             </div>
                         </div>
