--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center hero-text">
                         <h3>¡María recibe su primera comunión!</h3>
-                        <p>19 de Septiembre de 2021 <br/>
-                            A María le gustaría que formeis parte de este gran día 
-                        </p>
+                        <div class="initial">
+                            <p >19 de Septiembre de 2021 <br/>
+                                Me gustaría que formeis parte de este gran día 
+                            </p>
+                        </div>
+                        
                         <div id="countdown" class="count">
                             <h3>Cuenta atrás</h3>
                         </div>
