--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
 <![endif]-->
-    <section class="hero">
+    <section class="hero hero-bottom">
         <section class="navigation fixed">
             <header class="header_fixed">
                 <div class="header-content">
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row confirm">
                 <!-- <div class="col-sm-4 hidden-xs text-center"><a href="#confirmation" -->
                 <div class="text-center"><a href="#confirmation"
                         class="btn btn-accent btn-large text-center rsvp-btn btn-background-white"><strong>confirmación</strong></a>
@@ -91,7 +91,7 @@
 
             </div>
         </div>
-        <div class="down-arrow floating-arrow"><a href="#events"><i class="fa fa-angle-down"></i></a></div>
+        <div class="down-arrow floating-arrow top-arrow"><a href="#events"><i class="fa fa-angle-down"></i></a></div>
     </section>
 
     <section id="intro" class="section-padding">
@@ -121,7 +121,9 @@
                 </div>
                 <div class="col-md-3 hidden-sm hidden-xs"><img src="img/unicornio2.jpg" class="wp2"></div>
             </div>
-            <div class="row">
+            <div class="row" style="
+            padding-top: 7%;
+        ">
                 <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/unicornio.jpg" class="wp8">
                 </div>
                 <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/unicornio2.jpg" class="wp9">
