--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="header-nav">
                         <nav>
                             <ul class="primary-nav">
-                                <li><a href="#intro">Sobre María</a></li>
+                                <li><a href="#intro">¡Os espero!</a></li>
                                 <li><a href="#events">Eventos</a></li>
                                 <!--<li><a href="#services">Servicios</a></li>-->
                                 <!--<li><a href="#instagram">Redes sociales</a></li>-->
@@ -70,11 +70,9 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center hero-text">
-                        <h3>¡María recibe su primera comunión!</h3>
+                        <h3>¡Se acerca mi primera comunión!</h3>
                         <div class="initial">
-                            <p >19 de Septiembre de 2021 <br/>
-                                Me gustaría que formeis parte de este gran día 
-                            </p>
+                            <p >19 de Septiembre de 2021 </p>
                         </div>
                         
                         <div id="countdown" class="count">
@@ -97,26 +95,30 @@
     <section id="intro" class="section-padding">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-center">
+                <!-- <div class="col-md-12 text-center">
                     <h3 class="header">Sobre María</h3>
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <div class="col-md-3 hidden-sm hidden-xs"><img src="img/unicornio.jpg" class="wp1"></div>
                 <div class="col-md-6 hidden-sm hidden-xs">
                     <p class="about-us-margin-top">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales scelerisque
-                        tellus eget tincidunt. Fusce porttitor iaculis cursus. Maecenas tincidunt, metus vel 
-                        efficitur consequat, mi arcu maximus ex, molestie mollis lorem leo eu dui. Vestibulum 
-                        ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; 
+                        <br/>
+                        Hay momentos en la vida <br/>
+                        que son especiales por si solos, <br/> 
+                        compartirlos con las personas que quieres <br/>
+                        los convierte en innolvidables<br/>
+                        ¡Os espero!<br/>
                     </p>                   
                 </div>
                 <div class="col-md-6 visible-sm visible-xs">
                     <p class="about-us-margin">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales scelerisque
-                        tellus eget tincidunt. Fusce porttitor iaculis cursus. Maecenas tincidunt, metus vel 
-                        efficitur consequat, mi arcu maximus ex, molestie mollis lorem leo eu dui. Vestibulum 
-                        ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; 
+                        <br/>
+                        Hay momentos en la vida <br/>
+                        que son especiales por si solos, <br/> 
+                        compartirlos con las personas que quieres <br/>
+                        los convierte en innolvidables <br/>
+                        ¡Os espero!<br/>
                     </p>
                 </div>
                 <div class="col-md-3 hidden-sm hidden-xs"><img src="img/unicornio2.jpg" class="wp2"></div>
@@ -388,8 +390,8 @@
         </div>
     </section>
 
-    <section id="love-center" class="section-padding">
-        <img class="love" src="img/unicornio3.jpg" alt="" />
+    <section id="love-center" class="section-padding love">
+        
     </section>
 
     <footer>
